--- a/Ch05/4_Layout.html
+++ b/Ch05/4_Layout.html
@@ -41,7 +41,7 @@
         }
         main > section {
             float: right;
-            width: 530px;
+            width: auto;
             height: auto;
             background-color: #eee;
             padding: 10px;
@@ -49,7 +49,7 @@
         }
 
         main > section > article {
-            width: 100%;
+            width: 510px;
             height: 200px;
             background-color: #fff;
             margin-top: 10px;
