--- a/Board/modify.html
+++ b/Board/modify.html
@@ -39,7 +39,7 @@
                     </table>
                     
                     <div>
-                        <a href="#" class="btn btnCancel">취소</a>
+                        <a href="./view.html" class="btn btnCancel">취소</a>
                         <input type="submit" value="작성완료" class="btn btnComplete"/>
                     </div>
                 </form>
