--- a/Real113/1-main.html
+++ b/Real113/1-main.html
@@ -411,7 +411,14 @@
                 </article>                
             </section>
         </main>
-        <footer></footer>
+        <footer>
+            <img src="./img/footer_logo.jpg" alt="푸터 로고">
+            <p>
+                (주)컴퍼니 / 사업자등록번호 123-45-67890 /   통신판매업신고 제 2013-컴퍼니구-123호 / 등록번호 컴퍼니01234 (2013.04.01) / 발행인 : 홍길동<br>
+                대표 : 홍길동 / 이메일 : email@mail.mail / 전화 : 01) 234-5678 / 부산시 금정구 따듯한동 123-1
+                <span>Copyright(C)컴퍼니 All rights reserved.</span>
+            </p>
+        </footer>
     </div>
 </body>
 </html>
