--- a/Farmstory/community/qna.html
+++ b/Farmstory/community/qna.html
@@ -2,13 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>팜스토리::인사말</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <style>
-        
-
-
-    </style>
+    <title>팜스토리::장보기</title>
+    <link rel="stylesheet" href="../css/style.css">    
 </head>
 <body>
     <div id="wrapper">
@@ -31,18 +26,21 @@
             </ul>
         </header>
         <div id="sub">
-            <div><img src="../img/sub_top_tit1.png" alt="INTRODUCTION"></div>
-            <section class="cate1">
+            <div><img src="../img/sub_top_tit5.png" alt="COMMUNITY"></div>
+            <section class="cate5">
                 <aside>
-                    <img src="../img/sub_aside_cate1_tit.png" alt="팜스토리소개">
-                    <ul>
-                        <li class="on"><a href="./hello.html">인사말</a></li>
-                        <li><a href="./direction.html">찾아오시는길</a></li>
+                    <img src="../img/sub_aside_cate4_tit.png" alt="이벤트"/>
+                    <ul class="lnb">
+                        <li><a href="./notice.html">공지사항</a></li>
+                        <li><a href="./menu.html">오늘의식단</a></li>
+                        <li><a href="./chef.html">나도요리사</a></li>
+                        <li class="on"><a href="./qna.html">1:1고객문의</a></li>
+                        <li><a href="./faq.html">자주묻는질문</a></li>
                     </ul>
                 </aside>
                 <article>
                     <nav>
-                        <img src="../img/sub_nav_tit_cate1_tit1.png" alt="인사말">
+                        <img src="../img/sub_nav_tit_cate5_tit4.png" alt="1:1고객문의">
                     </nav>
                     <p>
                         컨텐츠 내용
