--- a/Farmstory/croptalk/grow.html
+++ b/Farmstory/croptalk/grow.html
@@ -2,13 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>팜스토리::인사말</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <style>
-        
-
-
-    </style>
+    <title>팜스토리::장보기</title>
+    <link rel="stylesheet" href="../css/style.css">    
 </head>
 <body>
     <div id="wrapper">
@@ -31,18 +26,19 @@
             </ul>
         </header>
         <div id="sub">
-            <div><img src="../img/sub_top_tit1.png" alt="INTRODUCTION"></div>
-            <section class="cate1">
+            <div><img src="../img/sub_top_tit3.png" alt="CROP TALK"></div>
+            <section class="cate3">
                 <aside>
-                    <img src="../img/sub_aside_cate1_tit.png" alt="팜스토리소개">
+                    <img src="../img/sub_aside_cate3_tit.png" alt="농작물이야기">
                     <ul>
-                        <li class="on"><a href="./hello.html">인사말</a></li>
-                        <li><a href="./direction.html">찾아오시는길</a></li>
+                        <li><a href="./story.html">농작물이야기</a></li>
+                        <li class="on"><a href="./grow.html">텃밭가꾸기</a></li>
+                        <li><a href="./school.html">귀농학교</a></li>
                     </ul>
                 </aside>
                 <article>
                     <nav>
-                        <img src="../img/sub_nav_tit_cate1_tit1.png" alt="인사말">
+                        <img src="../img/sub_nav_tit_cate3_tit2.png" alt="텃밭가꾸기">
                     </nav>
                     <p>
                         컨텐츠 내용
