--- a/Farmstory/introduction/direction.html
+++ b/Farmstory/introduction/direction.html
@@ -2,13 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>팜스토리::인사말</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <style>
-        
-
-
-    </style>
+    <title>팜스토리::찾아오시는길</title>
+    <link rel="stylesheet" href="../css/style.css">    
 </head>
 <body>
     <div id="wrapper">
@@ -36,13 +31,13 @@
                 <aside>
                     <img src="../img/sub_aside_cate1_tit.png" alt="팜스토리소개">
                     <ul>
-                        <li class="on"><a href="./hello.html">인사말</a></li>
-                        <li><a href="./direction.html">찾아오시는길</a></li>
+                        <li><a href="./hello.html">인사말</a></li>
+                        <li class="on"><a href="./direction.html">찾아오시는길</a></li>
                     </ul>
                 </aside>
                 <article>
                     <nav>
-                        <img src="../img/sub_nav_tit_cate1_tit1.png" alt="인사말">
+                        <img src="../img/sub_nav_tit_cate1_tit2.png" alt="찾아오시는길">
                     </nav>
                     <p>
                         컨텐츠 내용
